# aurix

./: .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  action.yml  aurix.yaml  pyproject.toml  requirements.txt  test_ai_enhanced.py
.aurix/: config.example.yaml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: aurix-pipeline.yml  aurix-review.yml
aurix/: __init__.py  config.py  main.py
aurix/actions/: __init__.py  run.py
aurix/ai/: __init__.py  reviewer.py
aurix/api/: __init__.py  main.py
aurix/cli/: __init__.py  commands.py
aurix/config/: __init__.py  team_config.py
aurix/core/: __init__.py  confidence_engine.py  engine.py  micro_agent.py  module.py  risk_assessor.py  task_decomposer.py
aurix/integrations/: __init__.py  github.py
aurix/models/: __init__.py  review_action.py
aurix/modules/: __init__.py  code_review.py  code_review_adapter.py  sdlc.py  sdlc_adapter.py
aurix/storage/: __init__.py  base.py  file_storage.py
examples/: github-workflow.yml  test_ai_review.py
tests/: __init__.py  test_code_review.py  test_confidence_engine.py  test_engine.py  test_risk_assessor.py  test_storage.py
